force-app/main/default/objects/User_Permission__c/User_Permission__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>User Permission</label>
</CustomObject>