force-app/main/default/objects/User_Permission__c/fields/Permission_API__c.field-meta.xml
<CustomField>
    <fullName>Permission_API__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Permission API</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>