force-app/main/default/objects/User_Permission__c/fields/Profile_ID__c.field-meta.xml
<CustomField>
    <fullName>Profile_ID__c</fullName>
    <description>This field for input Profile Id 15 digit</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Input salesforce Profile ID 15 digit</inlineHelpText>
    <label>Profile ID</label>
    <length>15</length>
    <required>true</required>
    <type>Text</type>
</CustomField>