force-app/main/default/objects/User_Permission__c/fields/Profile_Name__c.field-meta.xml
<CustomField>
    <fullName>Profile_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Profile Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>