force-app/main/default/objects/User_Permission__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Permission_Name__c</columns>
    <columns>Permission_API__c</columns>
    <columns>Profile_Name__c</columns>
    <columns>Profile_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>